2001-03-14  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-part.c (g_mime_part_get_content_disposition_parameter):
	It's okay to have a NULL disposition or a NULL param hash.
	(g_mime_part_get_filename): Same.
	(g_mime_part_get_content): It's okay not to have content.

2001-03-13  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (quoted_decode): Fix a possible buffer overrun.

2001-02-27  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (parse_rfc822_date): Allow for time token to not
	have a seconds field.

2001-02-11  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-part.c (g_mime_part_to_string): Oops. Don't init
	content_md5 with the content location string ;-)

	* gmime-parser.c (g_mime_parser_construct_part): Init content to
	NULL to get rid of a warning (this doesn't really matter as 'len'
	was init'd to 0)

	* gmime-part.c: #include unistd.h

2001-01-27  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-part.c (g_mime_part_set_content_byte_array): So
	set_content_array() was no good. After inspecting glib it was
	discovered that there are hidden data members of a GByteArray that
	hold info like if the data is NUL terminated, how much data is
	allocated, etc.

2001-01-26  Charles Kerr <charles@superpimp.org>

	* gmime-part.c (g_mime_part_set_content_array): new function.

2001-01-25  Charles Kerr <charles@superpimp.org>

	* gmime-part.c (g_mime_part_destroy): fix memory leak - the
	disposition wasn't being g_free()d.

2001-01-24  Charles Kerr <charles@superpimp.org>

	* gmime-part.c (g_mime_part_get_filename): Now takes a const
	GMimePart.

2001-01-17  Jeffrey Stedfast  <fejj@ximian.com>

	* internet-address.c (encoded_name): Updated.

	* gmime-part.c (g_mime_part_set_pre_encoded_content): Updated to
	reflect changes to gmime-utils.

	* gmime-utils.c (g_mime_utils_text_is_8bit): Take a len argument.
	(g_mime_utils_best_encoding): Same.
	(encode_8bit_word): Updated.

2001-01-14  Jeffrey Stedfast  <fejj@ximian.com>
