@@ -1,3 +1,9 @@
+2001-03-15  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* internet-address.c (internet_address_new_from_string): Try to be
+	a little better about extracting the name, not 100% accurate but
+	better I guess.
+
 2001-03-14  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* gmime-part.c (g_mime_part_get_content_disposition_parameter):
